force-app/main/default/objects/Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Calculateable. Total money paid for this product. Cannot use formula since field is used in rollup.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>