force-app/main/default/objects/Line_Item__c/fields/Product_Name_With_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_With_Code__c</fullName>
    <formula>Product__r.Name +&quot; (&quot;+Product__r.Code__c+&quot;)&quot;</formula>
    <label>Product Name With Code</label>
    <type>Text</type>
</CustomField>