force-app/main/default/objects/Line_Item__c/validationRules/Quantity_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_amount</fullName>
    <active>true</active>
    <description>Quantity can not be less than 1</description>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity can not be less than 1</errorMessage>
</ValidationRule>